added a few things

--- a/NGCF.ipynb
+++ b/NGCF.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "NGCF.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNNiFIrFFna5zTzKX7DoQXu",
+      "authorship_tag": "ABX9TyMzzHJJoyAlSgVpROFRJbok",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,16 +52,16 @@
       "metadata": {
         "id": "RFXCdLlzs3Sp",
         "colab_type": "code",
+        "outputId": "ecf7afcd-43cf-4df3-f8a2-8de8da8c6421",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "ecf7afcd-43cf-4df3-f8a2-8de8da8c6421"
+        }
       },
       "source": [
         "print(\"Ola\")"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,6 +71,60 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Bto0u_uQSrbn",
+        "colab_type": "text"
+      },
+      "source": [
+        "Importing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6ixlCOGySt0w",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 319
+        },
+        "outputId": "c4ba62b6-57a8-4243-e499-a23e8ffca3d9"
+      },
+      "source": [
+        "from test1.py import testFunction"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-177ab35b35f8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtest1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtestFunction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'test1'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5ROP1uvTSwR8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "testFunction(\"print this please\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
