--- a/NGCF.ipynb
+++ b/NGCF.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "NGCF.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMzzHJJoyAlSgVpROFRJbok",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,12 +26,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eVpy3DSEsudQ",
+        "id": "9Yt4bUlkamn5",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "import numpy as np\n",
+        "import random as rd"
       ],
       "execution_count": 0,
       "outputs": []
@@ -40,75 +40,122 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ch0l94Tbs1rX",
+        "id": "aFlr-rxYnsid",
         "colab_type": "text"
       },
       "source": [
-        "How does this work?"
+        "**Data class**\n",
+        "\n",
+        "The Data class is a utility class that will help loading the data, compute useful properties of the data and create sample batches."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RFXCdLlzs3Sp",
         "colab_type": "code",
-        "outputId": "ecf7afcd-43cf-4df3-f8a2-8de8da8c6421",
+        "id": "20UOLdQ9rdyX",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "print(\"Ola\")"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Ola\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Bto0u_uQSrbn",
-        "colab_type": "text"
-      },
-      "source": [
-        "Importing"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6ixlCOGySt0w",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 319
+          "height": 338
         },
-        "outputId": "c4ba62b6-57a8-4243-e499-a23e8ffca3d9"
+        "outputId": "b1ba980e-7334-46d0-eca9-d65157755afc"
       },
       "source": [
-        "from test1.py import testFunction"
+        "class Data(object):\n",
+        "  def __init__(self, path, batch_size):\n",
+        "    self.path = path\n",
+        "    self.batch_size = batch_size\n",
+        "\n",
+        "    train_file = path + '/train.txt'\n",
+        "    test_file = path + '/test.txt'\n",
+        "\n",
+        "    self.n_train = 0\n",
+        "    self.n_test = 0\n",
+        "    self.exist_users = []\n",
+        "    self.train_items = {}\n",
+        "    self.test_items = {}\n",
+        "\n",
+        "    with open(train_file) as f:\n",
+        "      for l in f.readlines():\n",
+        "        if len(l) > 0:\n",
+        "          l = l.strip('\\n')\n",
+        "          items = [int(i) for i in l.split(' ')]\n",
+        "          uid, train_items = items[0], items[1:]\n",
+        "          self.exist_users.append(uid)\n",
+        "          self.train_items[uid] = train_items\n",
+        "          self.n_train += len(train_items)\n",
+        "\n",
+        "    with open(test_file) as f:\n",
+        "      for l in f.readlines():\n",
+        "        if len(l) > 0:\n",
+        "          l = l.strip('\\n')\n",
+        "          try:\n",
+        "            items = [int(i) for i in l.split(' ')]\n",
+        "            uid, test_items = items[0], items[1:]\n",
+        "            self.exist_users.append(uid)\n",
+        "            self.test_items[uid] = test_items\n",
+        "            self.n_test += len(test_items)\n",
+        "          except Exception:\n",
+        "            continue\n",
+        "\n",
+        "    train_max_item = max([max(items) for items in list(self.train_items.values())])\n",
+        "    test_max_item = max([max(items) for items in list(self.test_items.values())])\n",
+        "    self.n_items = max(train_max_item, test_max_item)\n",
+        "    self.n_users = max(self.exist_users)\n",
+        "  \n",
+        "\n",
+        "  def sample(self):\n",
+        "    if self.batch_size <= self.n_users:\n",
+        "      users = rd.sample(self.exist_users, self.batch_size)\n",
+        "    else:\n",
+        "      users = [rd.choice(self.exist_users) for _ in range(self.batch_size)]\n",
+        "\n",
+        "\n",
+        "    def sample_pos_items_for_u(u, num):\n",
+        "      pos_items = self.train_items[u]\n",
+        "      n_pos_items = len(pos_items)\n",
+        "      pos_batch = []\n",
+        "      while True:\n",
+        "        if len(pos_batch) == num: break\n",
+        "        pos_id = np.random.randint(low=0, high=n_pos_items, size=1)[0]\n",
+        "        pos_i_id = pos_items[pos_id]\n",
+        "\n",
+        "        if pos_i_id not in pos_batch:\n",
+        "          pos_batch.append(pos_i_id)\n",
+        "      return pos_batch\n",
+        "\n",
+        "\n",
+        "    def sample_neg_items_for_u(u, num):\n",
+        "      neg_batch = []\n",
+        "      while True:\n",
+        "        if len(neg_batch) == num: break\n",
+        "        neg_id = np.random.randint(low=0, high=self.n_items, size=1)[0]\n",
+        "        if neg_id not in self.train_items[u] and neg_id not in neg_batch:\n",
+        "          neg_batch.append(neg_id)\n",
+        "      return neg_batch\n",
+        "    \n",
+        "\n",
+        "    pos_items, neg_items = [], []\n",
+        "    for u in users:\n",
+        "      pos_items += sample_pos_items_for_u(u, 1)\n",
+        "      neg_items += sample_neg_items_for_u(u, 1)\n",
+        "\n",
+        "    return users, pos_items, neg_items\n",
+        "\n",
+        "data = Data('.', 10)"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "ModuleNotFoundError",
+          "ename": "FileNotFoundError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-177ab35b35f8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtest1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtestFunction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'test1'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-fbd1bd86811b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     80\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0musers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpos_items\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneg_items\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mData\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-2-fbd1bd86811b>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, path, batch_size)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_items\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_file\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m       \u001b[0;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './train.txt'"
           ]
         }
       ]
@@ -116,12 +163,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5ROP1uvTSwR8",
+        "id": "P2iFaHvdvc8J",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "testFunction(\"print this please\")"
+        "data.sample()"
       ],
       "execution_count": 0,
       "outputs": []
