Load data from Google Drive

--- a/NGCF.ipynb
+++ b/NGCF.ipynb
@@ -32,7 +32,39 @@
       },
       "source": [
         "import numpy as np\n",
-        "import random as rd"
+        "import random as rd\n",
+        "from google.colab import drive"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ni4rEp2I06Rd",
+        "colab_type": "text"
+      },
+      "source": [
+        "**File loading**\n",
+        "\n",
+        "Here we use the Google Drive mountpoint to load files. For this to work, note the following:\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   The first time you execute this, it will provide a link, which you need to follow and give permission for Colab to access your Google Drive.\n",
+        "*   Make sure that the data is located in the folder `RP_data` which should be located in the root of your Drive."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-GuQIsFhz_O6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "drive.mount('/content/drive')\n",
+        "data_path = './drive/My Drive/RP_data'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -54,11 +86,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "20UOLdQ9rdyX",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 338
-        },
-        "outputId": "b1ba980e-7334-46d0-eca9-d65157755afc"
+        "colab": {}
       },
       "source": [
         "class Data(object):\n",
@@ -142,23 +170,10 @@
         "\n",
         "    return users, pos_items, neg_items\n",
         "\n",
-        "data = Data('.', 10)"
+        "data = Data(data_path, 10)"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-fbd1bd86811b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     80\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0musers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpos_items\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneg_items\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mData\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-2-fbd1bd86811b>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, path, batch_size)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_items\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_file\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m       \u001b[0;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './train.txt'"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
